# ar

./: .cproject  .project  Makefile  ar.profile
lua/: CMakeLists.txt  README.md  build.sh  init.lua  init.lua~  lua-ar.c
src/: ar.cpp  ar.h
test/: test.cpp
torch/: ar.profile  ar.profile~
torch/cifar.torch/: train.lua
torch/test/: run_dyce.sh  test.lua  test.lua~
