CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../src)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib)

SET(src lua-ar.c)
SET(luasrc init.lua)

ADD_TORCH_PACKAGE(lar "${src}" "${luasrc}")

TARGET_LINK_LIBRARIES(lar luaT TH)
IF(LUALIB)
  TARGET_LINK_LIBRARIES(lar ${LUALIB})
ENDIF()
